fix(module:select): options overflow content cannot be hidden (#5057)
close #5047

--- a/components/select/style/patch.less
+++ b/components/select/style/patch.less
@@ -6,4 +6,8 @@
   margin-top: 4px;
   margin-bottom: 4px;
   display: block;
+
+  .cdk-virtual-scroll-content-wrapper {
+    right: 0;
+  }
 }
